--- a/index.html
+++ b/index.html
@@ -6,11 +6,41 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Done</title>
     <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 </head>
 
 <body>
     <div id='app'>Eyo</div>
     <script>
+        const name = 'Tyler'
+        const handle = '@tylermcginnis';
+
+
+        const nameElement = React.createElement(
+            'h1',
+            null,
+            name
+        )
+
+        const handleElement = React.createElement(
+            'h3',
+            null,
+            handle
+        )
+
+        const wrapperElement = React.createElement(
+            'div', {
+                id: 'container'
+            },
+            nameElement,
+            handleElement
+        )
+
+        console.log('wrapperElement', wrapperElement)
+        ReactDOM.render(
+            wrapperElement,
+            document.getElementById('app')
+        )
     </script>
 </body>
 
