--- a/index.html
+++ b/index.html
@@ -15,25 +15,28 @@
         const name = 'Tyler'
         const handle = '@tylermcginnis';
 
+        function NameComponent(props) {
+            return React.createElement(
+                'h1',
+                null,
+                props.name,
+            )
+        }
 
-        const nameElement = React.createElement(
-            'h1',
-            null,
-            name
-        )
-
-        const handleElement = React.createElement(
-            'h3',
-            null,
-            handle
-        )
+        function HandleComponent(props) {
+            return React.createElement(
+                'h3',
+                null,
+                props.handle,
+            )
+        }
 
         const wrapperElement = React.createElement(
             'div', {
                 id: 'container'
             },
-            nameElement,
-            handleElement
+            NameComponent,
+            HandleComponent
         )
 
         console.log('wrapperElement', wrapperElement)
