--- a/index.html
+++ b/index.html
@@ -1,50 +1,45 @@
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Done</title>
-    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-</head>
+    <script
+      crossorigin
+      src="https://unpkg.com/react@16/umd/react.development.js"
+    ></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"
+    ></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+  </head>
 
-<body>
-    <div id='app'>Eyo</div>
-    <script>
-        const name = 'Tyler'
-        const handle = '@tylermcginnis';
+  <body>
+    <div id="app">Eyo</div>
+    <script type='text/babel'>
+      const name = "Tyler";
+      const handle = "@tylermcginnis";
 
-        function NameComponent(props) {
-            return React.createElement(
-                'h1',
-                null,
-                props.name,
-            )
-        }
+      function NameComponent(props) {
+        return <h1>{props.name} </h1>;
+      }
 
-        function HandleComponent(props) {
-            return React.createElement(
-                'h3',
-                null,
-                props.handle,
-            )
-        }
+      function HandleComponent(props) {
+        return <h3>{props.handle}</h3>;
+      }
 
-        const wrapperElement = React.createElement(
-            'div', {
-                id: 'container'
-            },
-            NameComponent,
-            HandleComponent
-        )
+      function App() {
+        return (
+          <div id="container">
+            <NameComponent name={name} />
+            <HandleComponent handle={handle} />
+          </div>
+        );
+      }
 
-        console.log('wrapperElement', wrapperElement)
-        ReactDOM.render(
-            wrapperElement,
-            document.getElementById('app')
-        )
+      console.log("wrapperElement", wrapperElement);
+      ReactDOM.render(wrapperElement, document.getElementById("app"));
     </script>
-</body>
-
+  </body>
 </html>
