--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <body>
     <div id="app">Eyo</div>
-    <script type='text/babel'>
+    <script type="text/babel">
       const name = "Tyler";
       const handle = "@tylermcginnis";
 
