--- a/index-day2.html
+++ b/index-day2.html
@@ -18,19 +18,50 @@
   <body>
     <div id="app">Eyo</div>
     <script type="text/babel">
-      function App () {
+      function FriendsList(props) {
         return (
-            <div>
-            Hello World
-            </div>
-        )
+          <ul>
+            {props.list.map(name => (
+              <li key={name}>
+                <span>{name}</span>
+                <button onClick={() => props.onRemoveFriend()}>Remove</button>
+              </li>
+            ))}
+          </ul>
+        );
       }
 
-      ReactDom.render(
-        <App />,
-        document.getElementById('app')
-      )
+      class App extends React.Component {
+        constructor(props) {
+          super(props);
+
+          this.state = {
+            friends: ["Jordyn", "Monkjes", "Jake"]
+          };
+        }
+
+        handleAddFriend() {}
+
+        handleRemoveFriend(name) {
+          this.setState(currentState => {
+            return {
+              friends: currentState.friends.filter(friend => friend !== name)
+            };
+          });
+        }
+
+        render() {
+          return (
+            <div>
+              <FriendsList
+                list={this.state.friends}
+                onRemoveFriend={this.handleRemoveFriend}
+              />
+            </div>
+          );
+        }
+      }
+      ReactDOM.render(<App />, document.getElementById("app"));
     </script>
   </body>
 </html>
-
