--- a/index-day2.html
+++ b/index-day2.html
@@ -38,6 +38,10 @@
           this.state = {
             friends: ["Jordyn", "Monkjes", "Jake"]
           };
+
+          consol.log("Thiiisss", this);
+
+          this.handleRemoveFriend = this.handleRemoveFriend.bind(this);
         }
 
         handleAddFriend() {}
