--- a/index-day2.html
+++ b/index-day2.html
@@ -32,31 +32,53 @@
       }
 
       class App extends React.Component {
-        constructor(props) {
-          super(props);
-
-          this.state = {
-            friends: ["Jordyn", "Monkjes", "Jake"]
-          };
-
-          consol.log("Thiiisss", this);
-
-          this.handleRemoveFriend = this.handleRemoveFriend.bind(this);
+      constructor(props) {
+        super(props)
+        
+        this.state = {
+          friends: ['Jotdan', 'Mineski', 'Jake'],
+          input: '',
         }
 
-        handleAddFriend() {}
+          this.handleRemoveFriend = this.handleRemoveFriend.bind(this);
+          this.updateInput = this.updateInput.bind(this);
+          this.handleAddFriend = this.handleAddFriend.bind(this);
+        }
+
+        handleAddFriend() {
+          this.setState((currentState) => {
+            return {
+              friends: currentState.friends.concat([currentState.input]),
+              input: "",
+            }
+          })
+        }
 
         handleRemoveFriend(name) {
           this.setState(currentState => {
             return {
               friends: currentState.friends.filter(friend => friend !== name)
-            };
+            }
+          })
+        }
+        updateInput(e) {
+          const value = e.target.value;
+
+          this.setState({
+            input: value
           });
         }
 
         render() {
           return (
             <div>
+              <input
+                type="text"
+                placeholder="new friend"
+                value={this.state.input}
+                onChange={this.updateInput}
+              />
+              <button onClick={this.handleAddFriend}>Submit</button>
               <FriendsList
                 list={this.state.friends}
                 onRemoveFriend={this.handleRemoveFriend}
@@ -65,7 +87,7 @@
           );
         }
       }
-      ReactDOM.render(<App />, document.getElementById("app"));
+      ReactDOM.render(<App />, document.getElementById("app"))
     </script>
   </body>
 </html>
