--- a/index-day3.html
+++ b/index-day3.html
@@ -1,20 +1,11 @@
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Done</title>
-    <script
-      crossorigin
-      src="https://unpkg.com/react@16/umd/react.development.js"
-    ></script>
-    <script
-      crossorigin
-      src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"
-    ></script>
-    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-  </head>
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>First React App</title>
+  <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+  <script src='https://unpkg.com/babel-standalone@6/babel.min.js'></script>
+</head>
 <body>
   <div id='app'></div>
   <script>
@@ -23,15 +14,15 @@
         return new Promise((res, rej) => {
           const friends = [
             {
-              name: 'Jordyn',
+              name: 'Jordan',
               active: true,
             },
             {
-              name: 'Mikenzi',
+              name: 'George',
               active: true,
             },
             {
-              name: 'Jake',
+              name: 'Julia',
               active: false
             }
           ]
